--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
+    "faker": "^6.6.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
